Added documentation for add questions and add quiz
