# docs/swagger.json
@@ -4,11 +4,189 @@
         "description": "Dokumentasi API untuk aplikasi parenting Lapar.",
         "title": "Lapar Backend API",
         "contact": {},
-        "version": "1.0"
+        "version": "1.1"
     },
     "host": "localhost:2020",
     "basePath": "/",
     "paths": {
+        "/api/invite": {
+            "post": {
+                "description": "Send an invitation link to a child via email",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Invitations"
+                ],
+                "summary": "Invite a child",
+                "parameters": [
+                    {
+                        "description": "Child Email Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Invitation sent successfully",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Email already registered",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/quizzes": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "This endpoint allows a logged-in parent to create a new quiz.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quizzes"
+                ],
+                "summary": "Create a new quiz",
+                "parameters": [
+                    {
+                        "description": "Menambahkan Kuis",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CreateQuizRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Quiz created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/models.QuizResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/models.QuizResponseInvalidInput"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.QuizResponseUnauthorized"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/quizzes/questions": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "This endpoint allows a logged-in parent to add a question to an existing quiz.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quiz Questions"
+                ],
+                "summary": "Add a question to a quiz",
+                "parameters": [
+                    {
+                        "description": "Menambahkan Pertanyaan berdasarkan Kuis ID",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.AddQuestionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Question added successfully",
+                        "schema": {
+                            "$ref": "#/definitions/models.QuestionResponseSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/models.QuestionResponseInvalidInput"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.QuestionResponseUnauthorized"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "description": "Autentikasi pengguna dengan email dan password",
@@ -190,6 +368,46 @@
         }
     },
     "definitions": {
+        "handlers.AddQuestionRequest": {
+            "type": "object",
+            "required": [
+                "correct_answer",
+                "options",
+                "question",
+                "quiz_id"
+            ],
+            "properties": {
+                "correct_answer": {
+                    "type": "string"
+                },
+                "options": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "question": {
+                    "type": "string"
+                },
+                "quiz_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.CreateQuizRequest": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.LoginRequest": {
             "type": "object",
             "properties": {
@@ -218,6 +436,68 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "models.QuestionResponseInvalidInput": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Invalid input"
+                }
+            }
+        },
+        "models.QuestionResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Question added successfully"
+                },
+                "quiz_id": {
+                    "type": "string",
+                    "example": "12345..."
+                }
+            }
+        },
+        "models.QuestionResponseUnauthorized": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Unauthorized access"
+                }
+            }
+        },
+        "models.QuizResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Quiz created successfully"
+                },
+                "quiz_id": {
+                    "type": "string",
+                    "example": "12345"
+                }
+            }
+        },
+        "models.QuizResponseInvalidInput": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Invalid input"
+                }
+            }
+        },
+        "models.QuizResponseUnauthorized": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Unauthorized access"
                 }
             }
         }
