# handlers/quiz.go
@@ -5,6 +5,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
 	"lapar_backend/config"
+	//"lapar_backend/models"
 	"time"
 )
 
@@ -20,6 +21,18 @@ type AddQuestionRequest struct {
 	CorrectAnswer string   `json:"correct_answer" validate:"required"`
 }
 
+// CreateQuizHandler godoc
+// @Summary Create a new quiz
+// @Description This endpoint allows a logged-in parent to create a new quiz.
+// @Tags Quizzes
+// @Accept json
+// @Produce json
+// @Param body body CreateQuizRequest true "Menambahkan Kuis"
+// @Success 201 {object} models.QuizResponse "Quiz created successfully"
+// @Failure 400 {object} models.QuizResponseInvalidInput "Invalid input"
+// @Failure 401 {object} models.QuizResponseUnauthorized "Unauthorized"
+// @Security BearerAuth
+// @Router /api/quizzes [post]
 func CreateQuiz(c *fiber.Ctx) error {
 	// Ambil user_id dari token (disimpan di context ketika login berhasil)
 	parentID := c.Locals("userID")
@@ -65,8 +78,19 @@ func CreateQuiz(c *fiber.Ctx) error {
 	})
 }
 
+// AddQuizQuestionHandler godoc
+// @Summary Add a question to a quiz
+// @Description This endpoint allows a logged-in parent to add a question to an existing quiz.
+// @Tags Quiz Questions
+// @Accept json
+// @Produce json
+// @Param body body AddQuestionRequest true "Menambahkan Pertanyaan berdasarkan Kuis ID"
+// @Success 201 {object} models.QuestionResponseSuccess "Question added successfully"
+// @Failure 400 {object} models.QuestionResponseInvalidInput "Invalid input"
+// @Failure 401 {object} models.QuestionResponseUnauthorized "Unauthorized"
+// @Security BearerAuth
+// @Router /api/quizzes/questions [post]
 func AddQuestionToQuiz(c *fiber.Ctx) error {
-	// Parse input dari client
 	var req AddQuestionRequest
 	if err := c.BodyParser(&req); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
@@ -74,17 +98,14 @@ func AddQuestionToQuiz(c *fiber.Ctx) error {
 		})
 	}
 
-	// Validasi input
 	if req.QuizID == "" || req.Question == "" || len(req.Options) == 0 || req.CorrectAnswer == "" {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"error": "All fields are required",
 		})
 	}
 
-	// Generate UUID untuk question_id
 	questionID := uuid.New()
 
-	// Konversi options menjadi JSON
 	optionsJSON, err := json.Marshal(req.Options)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
@@ -92,7 +113,6 @@ func AddQuestionToQuiz(c *fiber.Ctx) error {
 		})
 	}
 
-	// Simpan ke database
 	query := `
     INSERT INTO quiz_questions (id, quiz_id, question, options, correct_answer, created_at)
     VALUES ($1, $2, $3, $4, $5, $6)
